--- a/app/package.json
+++ b/app/package.json
@@ -14,15 +14,11 @@
     "@react-navigation/native": "^6.1.7",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
-    "metro": "^0.76.0",
-    "metro-core": "^0.76.0",
     "react": "18.2.0",
-    "react-native": "0.71.14",
+    "react-native": "0.71.8",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
-    "typescript": "^4.9.4",
-    "@types/react": "~18.0.27"
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
