--- a/app/screens/app.json
+++ b/app/screens/app.json
@@ -4,9 +4,9 @@
     "slug": "learnBaseball",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/baseball_field.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/baseball_field.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -21,12 +21,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/baseball_field.png",
         "backgroundColor": "#FFFFFF"
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
-    }
+      "favicon": "./assets/baseball_field.png"
+    },
+    "assets": ["./assets"]
   }
 }
