--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "~14.0.4",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
-    "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
-    "metro": "^0.76.0",
+    "@types/react": "~18.3.12",
+    "expo": "~52.0.47",
+    "expo-font": "~13.0.4",
+    "expo-status-bar": "~2.0.1",
+    "metro": "^0.81.0",
     "metro-core": "^0.76.0",
-    "react": "18.2.0",
-    "react-native": "0.71.14",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
-    "typescript": "^4.9.4",
-    "@types/react": "~18.0.27"
+    "react": "18.3.1",
+    "react-native": "0.76.9",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2"
   },
   "private": true
 }
