--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
     "@expo/vector-icons": "~14.0.4",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
-    "expo": "~48.0.18",
-    "expo-asset": "~8.9.1",
-    "expo-font": "~11.1.1",
-    "expo-status-bar": "~1.4.4",
-    "metro": "^0.76.0",
+    "@types/react": "~18.2.45",
+    "expo": "~50.0.20",
+    "expo-asset": "~9.0.2",
+    "expo-font": "^11.10.3",
+    "expo-status-bar": "~1.11.1",
+    "metro": "~0.80.4",
     "metro-core": "^0.76.0",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
+    "react-native-web": "~0.19.6",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
